[package]
name = "igat"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.3"
acure = { version = "0.0.1", git = "https://github.com/Ichinose0/acure", features = ["d2d1"] }
raw-window-handle = "0.6.0"
log = "0.4.20"

[target."cfg(windows)".dependencies.winapi]
version = "0.3.9"
features = [
    "winuser",
    "windef"
]